@@ -125,6 +125,7 @@ var READSB;
         E145: "jet_swept",
         E170: "jet_swept",
         E45X: "jet_swept",
+        EMER: "ground_emergency",
         EUFI: "hi_perf",
         F1: "hi_perf",
         F100: "hi_perf",
@@ -144,6 +145,7 @@ var READSB;
         GLF4: "jet_swept",
         GLF5: "jet_swept",
         GLF6: "jet_swept",
+        GND: "ground_unknown",
         H25A: "jet_swept",
         H25B: "jet_swept",
         H25C: "jet_swept",
@@ -171,6 +173,7 @@ var READSB;
         RFAL: "hi_perf",
         S3: "hi_perf",
         S37: "hi_perf",
+        SERV: "ground_service",
         SR71: "hi_perf",
         SU15: "hi_perf",
         SU24: "hi_perf",
@@ -183,6 +186,7 @@ var READSB;
         T4: "hi_perf",
         TOR: "hi_perf",
         TU22: "hi_perf",
+        TWR: "ground_fixed",
         VAUT: "hi_perf",
         WB57: "hi_perf",
         Y130: "hi_perf",
