@@ -164,6 +164,7 @@ namespace READSB {
         E145: "jet_swept",
         E170: "jet_swept",
         E45X: "jet_swept",
+        EMER: "ground_emergency",
         EUFI: "hi_perf",
         F1: "hi_perf",
         F100: "hi_perf",
@@ -183,6 +184,7 @@ namespace READSB {
         GLF4: "jet_swept",
         GLF5: "jet_swept",
         GLF6: "jet_swept",
+        GND: "ground_unknown",
         H25A: "jet_swept",
         H25B: "jet_swept",
         H25C: "jet_swept",
@@ -210,6 +212,7 @@ namespace READSB {
         RFAL: "hi_perf",
         S3: "hi_perf",
         S37: "hi_perf",
+        SERV: "ground_service",
         SR71: "hi_perf",
         SU15: "hi_perf",
         SU24: "hi_perf",
@@ -222,6 +225,7 @@ namespace READSB {
         T4: "hi_perf",
         TOR: "hi_perf",
         TU22: "hi_perf",
+        TWR: "ground_fixed",
         VAUT: "hi_perf",
         WB57: "hi_perf",
         Y130: "hi_perf",
